Time: 752 ms, Memory: 147.9 MB - LeetHub